deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okd-tekton-workshop-service
spec:
  selector:
    app: okd-tekton-workshop
  ports:
    - port: 8080
      targetPort: 3001
