deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: okd-tekton-workshop-route
spec:
  to:
    kind: Service
    name: okd-tekton-workshop-service
  port:
    targetPort: 8080
